fix: Scrollbar issues with the filters menu. Removed scrollbar width for now

--- a/src/style/pages/_find-match.scss
+++ b/src/style/pages/_find-match.scss
@@ -214,6 +214,7 @@
     .filters-wrapper {
       position: absolute;
       overflow-y: hidden;
+      scrollbar-width: none;
       width: 100%;
       height: 100%;
       top: 0;
